Criação do README e mudança dos modificadores de acesso das classes

--- a/build.xml
+++ b/build.xml
@@ -48,7 +48,7 @@
 
     <target name="run">
         <java jar="${file.jar}" fork="true">
-            <arg line="${dir.assets}/exemplo.tahi"/>
+            <arg line="${dir.assets}/ex1.tahi"/>
         </java>
     </target>
 
